[project]
name = "fast-queue"
version = "1.0.0"
authors = [
  { name="Michalis Michailidis", email="mixalismixailidis857@gmail.com" },
]
description = "A python FastQueue client"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/michalismichailidis1999/fast-queue-python-library"
Issues = "https://github.com/michalismichailidis1999/fast-queue-python-library/issues"